@@ -3,6 +3,7 @@ v0.9.6
 
     * Fix downloading of updates when there was a HTTP redirect encountered
       as part of VersionFinder.find_versions().
+    * Fix win32 bootstrap version of abspath() to correctly handle UNC paths.
 
 
 v0.9.5
